# whyrc

./: .gitignore  Cargo.toml  README.md
client/: Cargo.toml
client/src/: events.rs  main.rs  net.rs  ui.rs
client/src/net/: error.rs  server_connection.rs
client/src/ui/: helper.rs  menu.rs  state.rs  view.rs
client/src/ui/state/: room_list_state.rs
client/src/ui/view/: room_list_view.rs
protocol/: Cargo.toml
protocol/src/: data.rs  lib.rs  room_list.rs
protocol/src/data/: message.rs  room.rs  room_list.rs
server/: Cargo.toml
server/src/: chat.rs  main.rs  net.rs  room.rs  server.rs
server/src/chat/: room.rs
server/src/net/: connection.rs  server.rs
util/: Cargo.toml
util/src/: lib.rs
