[package]
name = "client"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
protocol = { path = "../protocol" }
clap = { version = "3.2.17", features = ["derive"] }
serde_json = "1.0"
tui = "0.19"
tui-textarea = "*"
crossterm = "0.25"
rand = "0.8"
